--- a/docs/_includes/ono-step-by-step.html
+++ b/docs/_includes/ono-step-by-step.html
@@ -55,6 +55,13 @@
         </tr>
         {% endif %}
 
+        {% if card.question %}
+        <tr>
+          <td>Vraag</td>
+          <td>{{ card.question }}</td>
+        </tr>
+        {% endif %}
+
       </tbody>
     </table>
 
