--- a/docs/_sass/ono.scss
+++ b/docs/_sass/ono.scss
@@ -228,6 +228,22 @@ $board-background-color: #ffffff;
   padding-top: 1rem;
 }
 
+.ono-stage-row {
+  background-color: #dddddd;
+  margin: 0;
+  margin-top: 1rem;
+  padding: .8rem;
+  flex-direction: column;
+
+  h3 {
+    font-size: 26px;
+  }
+
+  span {
+    font-style: italic;
+  }
+}
+
 hr.ono-step-separator {
   border-top: solid 1px rgba(0,0,0,.15);
   margin: 0;
