--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-dark text-light">
   <div class="container text-center">
-    {{ 'now' | date: "%Y" }} &copy; Copyright by Howest - <a href="https://github.com/huysentruitw/create-your-future-website">View website source</a>
+    {{ 'now' | date: "%Y" }} &copy; Copyright by Howest
   </div>
 </footer>
