--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -1,5 +1,5 @@
-$primary-color: rgb(37, 172, 218);
-$primary-color-dark: rgb(0, 142, 188);
+$primary-color: #4A6EB4;
+$primary-color-dark: #38538a;
 
 html, body {
   width: 100%;
@@ -18,6 +18,7 @@ header {
   color: #ffffff;
 
   &.home {
+    position: relative;
     text-align: center;
     background-image: url('/assets/images/background.jpg');
     background-position: center;
@@ -37,8 +38,13 @@ header {
         font-size: 4rem;
       }
 
+      &__logo {
+        width: 18rem;
+      }
+
       .btn-primary {
         margin-top: 2rem;
+        padding: 0.75rem 1.5rem;
       }
     }
   }
@@ -49,6 +55,26 @@ header {
 
   p {
     font-size: 1.5rem;
+  }
+
+  .home__more-button {
+    position: absolute;
+    left: calc(50% - 2rem);
+    bottom: 1rem;
+
+    svg {
+      width: 4rem;
+      height: 4rem;
+      fill: #ffffff;
+      opacity: .5;
+      transition: opacity 500ms ease-out;
+    }
+
+    &:hover {
+      svg {
+        opacity: 1;
+      }
+    }
   }
 }
 
