--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -61,6 +61,9 @@ header {
     position: absolute;
     left: calc(50% - 2rem);
     bottom: 1rem;
+    animation-name: more-button;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
 
     svg {
       width: 4rem;
@@ -71,11 +74,21 @@ header {
     }
 
     &:hover {
+      animation: none;
+
       svg {
         opacity: 1;
       }
     }
   }
+}
+
+@keyframes more-button {
+  0% { bottom: 1rem; }
+  55% { bottom: 1rem; }
+  65% { bottom: 2rem; }
+  75% { bottom: 1rem; }
+  85% { bottom: 2rem; }
 }
 
 section {
