--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow-sm">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">ONO</a>
+    <span class="navbar-brand">
+      <svg viewBox="0 0 100 40">
+        <use xlink:href='assets/images/logos/ono.svg#small'></use>
+      </svg>
+    </span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
