--- a/docs/_includes/ono-step-by-step.html
+++ b/docs/_includes/ono-step-by-step.html
@@ -89,7 +89,7 @@
 </div>
 
 {% if forloop.last == false %}
-<hr class="ono-step-separator">
+<hr class="ono-step-separator" />
 {% endif %}
 
 {% endfor %}
