--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -171,3 +171,44 @@ nav ul > li {
     }
   }
 }
+
+.blockquote {
+  display: block;
+  font-size: unset;
+  font-style: italic;
+  margin: 2rem 1rem 2rem 0.5rem;
+  padding-top: 0.75rem;
+  padding-left: 0.5rem;
+
+  border-left: solid 4px #4A6EB4;
+
+  .quote {
+    position: relative;
+    display: inline-block;
+    width: 2rem;
+    color: #cccccc;
+
+    &:first-of-type {
+      &::before {
+        position: absolute;
+        font-size: 4rem;
+        content: '\201c';
+        top: -3rem;
+      }
+    }
+
+    &:last-of-type {
+      &::before {
+        position: absolute;
+        font-size: 4rem;
+        content: '\201e';
+        top: -4.5rem;
+        left: 0.5rem;
+      }
+    }
+  }
+
+  &-footer {
+    font-style: none;
+  }
+}
